# narca

./: .gitignore  .pre-commit-config.yaml  DOCS.md  README.md  astar.py  difficulty_settings.json  env.yml  goto.nal  goto2.nal  griddly_knowledge.nal  lock.yml  nars_zelda.py  pyproject.toml  setup.cfg  udpnar.py  utils.py
experiments/drunk_dwarf/curriculum_learning/: curriculum-control.py  curriculum-load-1.py  curriculum-scratch-1.py
experiments/drunk_dwarf/demonstrate/: drunk_dwarf.py
experiments/drunk_dwarf/extended_curriculum/: drunk_dwarf.py  drunk_dwarf_extended.yml
experiments/drunk_dwarf/main/: drunk_dwarf.py  random_agent.py
experiments/zelda/demonstrate/: nars_zelda.py
experiments/zelda/main/: nars_zelda.py
experiments/zelda/procgen/: nars_zelda.py
narca/: agent.py  astar.py  drunk_dwarf.py  nar.py  narsese.py  udpnar.py  utils.py  zelda.py
