[tool.isort]
profile = "black"

[tool.poetry]
name = "NARCA"
version = "0.2.0"
description = "NARS Controlled Agent: an agent capable of playing various games in Gym environments, using NARS for planning."
authors = ["Adrian Borucki <ab@synthillect.ai>"]
license = "Apache-2.0"
keywords = ["NARS", "gym", "agent", "AI"]
packages = [{include = "narca"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
numpy = "^1.17"
matplotlib = "^3.2"
pyglet = "^1.3"
griddly = "==1.6.6"
icecream = "^2.1"
tensorboard = "^2.9"
tensorboardX = "^2.5"
narpyn = "^0.1.9"
neptune = "^1.3.2"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
isort = "^5.10"
ipython = "^8.4.0"
mypy = "^0.971"
ruff = "^0.0.277"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
