# DEPRECATED: pyproject.toml is the main configuration file.
[metadata]
name = narca
author = Adrian Borucki
version = 0.1.0
keywords = NARS, gym, agent, AI

[options]
python_requires = >=3.10
packages = find:
install_requires =
    numpy
    matplotlib
    pyglet
    icecream
    tensorboard
    tensorboardx
    griddly
    neptune-client

[options.extras_require]
dev =
    black
    isort
